--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@
 }
 
 body {
-background-color: #f2e7dc;
+background-color: #353535;
+color: #f2e7dc;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -34,7 +35,7 @@ overflow: hidden;
 .control button{
   text-transform: uppercase;
   background: transparent;
-  color: #fff;
+  color: #f2e7dc;
   font-weight: 700;
   border: none;
   cursor: pointer;
@@ -44,13 +45,44 @@ overflow: hidden;
   padding: 0.60rem 2.5rem;
   margin: 0 15px;
 }
-.control button { 
-  background-color: #903749;
+#button-start{ 
+  background-color: #116530;
+  color: #f2e7dc;
+
   transition: .2s ease;
 }
-.control button:hover{ 
+#button-start:hover{ 
+  background-color: #18A558;
+ transform: translateY(-2.5px);
+}
+#button-stop{ 
+  background-color: #903749;
+  color: #f2e7dc;
+  
+  transition: .2s ease;
+}
+#button-stop:hover{ 
   background-color: #E84545;
-  color: #fff;
+ transform: translateY(-2.5px);
+}
+#button-count-turns{ 
+  background-color: #145DA0;
+  color: #f2e7dc;
+
+  transition: .2s ease;
+}
+#button-count-turns:hover{ 
+  background-color: #2E8BC0;
+ transform: translateY(-2.5px);
+}
+#button-reset{ 
+  background-color: #FD7F20;
+  color: #f2e7dc;
+
+  transition: .2s ease;
+}
+#button-reset:hover{ 
+  background-color: #FDB750;
  transform: translateY(-2.5px);
 }
 
@@ -58,11 +90,15 @@ h1 {
   font-weight: bold;
   font-size: 2.5rem;
   text-transform: uppercase;
-  color: #0d0d0d;
 }
 .laps { 
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border-radius: 10px;
+  text-transform: uppercase;
 }
 footer{ 
   bottom: 0;
@@ -74,44 +110,65 @@ footer{
 footer p { 
   font-weight: bold;
 }
+.links {
+}
 
-@media(max-width:800px) {
+@media screen and (max-width:800px) {
   body{ 
     overflow: hidden;
   }
   .wrapper{ 
     padding: 0 1rem;
+    justify-content: space-evenly;
+  }
+  .laps { 
+    position: relative;
+    font-size: 1.5rem;
+    font-weight: 600;
+    background-color: gree;
+    border-radius: 10px;
+    color: #fff;
+    text-transform: uppercase;
   }
   .timer{
-    margin: 0 0 5rem 0;
     font-size: 4rem;
     font-weight: bold;
     letter-spacing: 0rem;
   }
   .control{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
+    display: grid;
+    grid-template-columns: auto auto;
+    row-gap: 1rem;
   }
 
   .control button{ 
     padding: 1.2rem;
-    margin: 0 0 .8rem;
-    width: 50%;
   }
   .links{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
   }
   .links img{
-    width: 30px;
+    width: 2rem;
   }
   h1{ 
-    margin: 0 0 5rem 0;
+
   }
   footer{ 
-    bottom: 5px;
+    bottom: 1vh;
   }
+  
+}
+@media screen and (max-height: 500px) { 
+  body{ 
+    overflow: auto;
+  }
+
+  footer p { 
+    font-size: .5rem;
+  }
+  .links img { 
+    width: 10px;
+  }
+
 }
